# chat-synth

./: CMakeLists.txt  chat-gpt.md  chat-readme.md  readme.md  swan-lake.txt
src/: synthesizer.cc
